@@ -2,7 +2,6 @@ package studio.one.base.security.acl.service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import studio.one.base.security.acl.domain.entity.AclClassEntity;
@@ -23,7 +22,9 @@ import studio.one.base.security.acl.web.dto.AclSidDto;
 import studio.one.base.security.acl.web.dto.AclSidRequest;
 
 /**
+ * 
  * Service that exposes ACL metadata management operations.
+ * 
  */
 @RequiredArgsConstructor
 public class AclAdministrationService {
@@ -36,7 +37,7 @@ public class AclAdministrationService {
     public List<AclClassDto> listClasses() {
         return classRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AclClassDto createClass(AclClassRequest request) {
@@ -45,6 +46,15 @@ public class AclAdministrationService {
         return toDto(classRepository.save(entity));
     }
 
+    /**
+     * 주어진 ID에 해당하는 클래스를 삭제합니다.
+     *
+     * <p>해당 ID를 가진 클래스 엔티티가 존재하면 영구적으로 삭제하며, 반환값은 없습니다.
+     *
+     * @param id 삭제할 클래스의 식별자
+     * @throws IllegalArgumentException 전달된 id가 null인 경우 발생할 수 있습니다.
+     * @throws org.springframework.dao.EmptyResultDataAccessException 해당 id에 해당하는 엔티티가 존재하지 않을 경우 발생할 수 있습니다.
+     */
     public void deleteClass(Long id) {
         classRepository.deleteById(id);
     }
@@ -52,7 +62,7 @@ public class AclAdministrationService {
     public List<AclSidDto> listSids() {
         return sidRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AclSidDto createSid(AclSidRequest request) {
@@ -69,7 +79,7 @@ public class AclAdministrationService {
     public List<AclObjectIdentityDto> listObjectIdentities() {
         return objectIdentityRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AclObjectIdentityDto createObjectIdentity(AclObjectIdentityRequest request) {
@@ -97,7 +107,7 @@ public class AclAdministrationService {
     public List<AclEntryDto> listEntries() {
         return entryRepository.findAll().stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AclEntryDto createEntry(AclEntryRequest request) {
